# Exp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  build.rb  build.sh  linux.code-workspace
assets/: CMakeLists.txt  settings.json  shader.rb
assets/game/debug/: random.json
assets/json/animations/test/: random.json
assets/json/game/characters/: main.json
assets/json/game/test/: random.json
assets/json/models/test/: random.json
assets/json/shaders/test/: random.json
assets/json/textures/test/: random.json
assets/models/: basic.json
assets/scripts/game/: player.lua  square.lua
assets/scripts/lib/: game.lua  geom.lua  gl.lua  input.lua  r.lua  render.lua
assets/scripts/src/game/: player.lua  square.lua
assets/scripts/src/ui/: info_menu.lua  object_creator.lua
assets/scripts/ui/: info_menu.lua  object_creator.lua
assets/shaders/: CMakeLists.txt  shader.rb  shaders.json
assets/shaders/src/: basic.fragment.glsl  basic.vertex.glsl  color.fragment.glsl  color.vertex.glsl  player.fragment.glsl  player.vertex.glsl  test_a.glsl  test_b.glsl  test_c.glsl  vertex_layout.glsl
assets/ui/: info_menu.xml  object_creator.xml
lib/: CMakeLists.txt
lib/cimg/: CMakeLists.txt
lib/gli/: CMakeLists.txt
lib/imgui/: CMakeLists.txt
lib/lua/: CMakeLists.txt
lib/stb/: CMakeLists.txt
src/: .clang-format  CMakeLists.txt  main.cpp  main.test.cpp
src/exp/: CMakeLists.txt  constants.hpp  file.cpp  file.hpp  game.cpp  game.hpp  gl.cpp  gl.hpp  input.cpp  input.hpp  io.cpp  io.hpp  player.hpp  render.cpp  render.hpp  resources.cpp  resources.hpp  settings.cpp  settings.hpp  ui.cpp  ui.hpp  util.hpp  window.cpp  window.hpp
src/exp/game/: camera.cpp  camera.hpp  info.cpp  info.hpp  object.cpp  object.hpp  world.cpp  world.hpp
src/exp/gl/: draw_description.cpp  draw_description.hpp  ebo.cpp  ebo.hpp  enums.hpp  error.hpp  error_map.cpp  error_map.hpp  program.cpp  program.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  texture_descriptor.hpp  uniform.cpp  uniform.hpp  vao.cpp  vao.hpp  vbo.cpp  vbo.hpp
src/exp/input/: dispatcher.cpp  dispatcher.hpp  displatcher.cpp  enums.cpp  enums.hpp  gamepad.cpp  gamepad.hpp  ihandler.cpp  ihandler.hpp  key_event.hpp  keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp  mouse_button_event.hpp  mouse_move_event.hpp
src/exp/io/: file.cpp  file.hpp
src/exp/math/: vertex.hpp
src/exp/render/: app_window.cpp  app_window.hpp  draw_description.cpp  draw_description.hpp  renderer.cpp  renderer.hpp
src/exp/resources/: animation_meta.cpp  animation_meta.hpp  animations.cpp  animations.hpp  game_objects.cpp  game_objects.hpp  id.hpp  iresource.cpp  iresource.hpp  model_meta.cpp  model_meta.hpp  models.cpp  models.hpp  object_meta.cpp  object_meta.hpp  producable.hpp  producer.hpp  script_meta.hpp  scripts.cpp  scripts.hpp  shader_meta.hpp  shader_program_meta.cpp  shader_program_meta.hpp  shaders.cpp  shaders.hpp  texture_meta.cpp  texture_meta.hpp  textures.cpp  textures.hpp
src/exp/settings/: setting.hpp  settings_manager.cpp  settings_manager.hpp
src/exp/ui/: ui_component.cpp  ui_component.hpp  ui_manager.cpp  ui_manager.hpp
src/exp/ui/components/: button.cpp  button.hpp  container.cpp  container.hpp  container.ipp  debug_ui.cpp  debug_ui.hpp  frame.cpp  frame.hpp  frame.ipp  gl_errors_ui.cpp  gl_errors_ui.hpp  repeat_component.cpp  repeat_component.hpp  repeat_component.ipp  sameline.cpp  sameline.hpp  shader_ui.cpp  shader_ui.hpp  text_box.cpp  text_box.hpp  text_box.ipp  ui_component.cpp  ui_component.hpp  window_ui.cpp  window_ui.hpp  window_ui.ipp
src/exp/util/: exceptions.hpp  thread_pool.cpp  thread_pool.hpp  worker_thread.cpp  worker_thread.hpp
src/test/: CMakeLists.txt  util.test.cpp
workspace/: linux.code-workspace
